llvm/build/tools/clang/test/PCH/Output/headersearch.cpp.tmp.stderr
In file included from /home/jazouani/llvm/llvm-3.2/tools/clang/test/PCH/headersearch.cpp:1:
In file included from /home/jazouani/llvm/build/tools/clang/test/PCH/Output/headersearch.cpp.tmp_orig/all.h:3:
/home/jazouani/llvm/build/tools/clang/test/PCH/Output/headersearch.cpp.tmp_orig/sub2/orig_sub2.h:2:50: error: type 'int' cannot be used prior to '::' because it has no members
template <typename T> void tf() { orig_sub2_1(); T::foo(); }
                                                 ^
/home/jazouani/llvm/llvm-3.2/tools/clang/test/PCH/headersearch.cpp:42:3: note: in instantiation of function template specialization 'tf<int>' requested here
  tf<int>();
  ^
1 error generated.
